remove reference to SVM options